v 18.3.1

* NEW Spaces browser in beta with client side Pagination
* NEW You can now redirect Home page

Known issues

* Missing button for create new space
* Some files from last page can Missing

v18.3

* NEW Spaces
* NEW Merge requests
* NEW Pagination for projects
* NEW API testing link
* UPDATE Sidebar now showing subitems
* UPDATE VueJS app for projects
* FIX branches now showing correct commit on branches list

v18.2

* UPDATE New design for Group projects table

v18.1.2

* UPDATE Tree now showing current branch instead of head
* UPDATE Branches now showing which branch is set as current

v 18.1.1 (2.0)

* NEW Pages - Simple content management system
* NEW Spaces - Upload binary files (cam be showed on pages)
* Vue app for Commits, branches and tags

v 18.1 (1.0)

First stable releasse. As of version 1.0 we change app versioning. Now version is mage with Year.Release.Patch for example
Version 1.0 is nov version 18.1 and 2nd patch for this will have verions 18.1.2

NEW Licensing - You need license to use some application features
NEW Labels
NEW Sidebar
NEW Laravel was upgraded to verision 5.6
NEW Cashier was remoed for now
UPDATE GitElephat update to v 2018
UPDATE PHP requirements is no set up to 7.1 and Up

Other - some more UI tweaks for beter usability

v 0.0.6

NEW Profiles can now have pictures
NEW File controller
NEW Profile image upload form
UPDATE Project show page now showing profile name instead of username in title
UPDATE Issues now show profile name instead of username
UPDATE Projects index now showing profile name and description
UPDATE Move form from issues to new page
UPDATE UI tweaks on login and register form
UPDATE more tests

v 0.0.5

NEW Profiles
NEW Api for repository files
NEW Repository files are now loaded via api, basic project info is loaded faster
NEW Projects are loaded via Api
NEW new CSS loader instead of text
UPDATE Bootstrap is update to v4.0.0
UPDATE New variable GIT_BINARY for ability to change git executable location
