@@ -8,6 +8,7 @@ APP_URL=http://localhost
 WEBAPP_URL=localhost
 WEBAPP_SSH_PORT=
 WEBAPP_HOME_REDIRECT=
+WEBAPP_ALLOW_REGISTRATION=true
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
